--- a/.github/workflows/publish-exch.yml
+++ b/.github/workflows/publish-exch.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Update submodules to latest remote commits
         run: |
-          git submodule update --remote --merge
+          git submodule update --remote --rebase
 
       - name: Commit and push if changes exist
         run: |
